# temple-lighting-automation

./: .gitignore  00_START_HERE.txt  AUTOMATION_GUIDE.md  CLAUDE.md  DELIVERY_SUMMARY.md  FILE_MANIFEST.txt  LICENSE  README.md  SOLUTION_SUMMARY.md  batch_config.json  menu.py  pyproject.toml  requirements.txt  setup_verify.py  temple_batch_processor.py  temple_lighting_automation.py
docs/: 00_START_HERE.txt
temple_lighting/: __init__.py  __main__.py  automation.py  batch.py  cli.py
